--- a/notebooks/02_clean_transform_silver.ipynb
+++ b/notebooks/02_clean_transform_silver.ipynb
@@ -202,7 +202,7 @@
     "    )\n",
     "\n",
     "    .withColumn(\"create_timestamp\", current_timestamp())\n",
-    "    .withColumn(\"update_timestamp\", current_timestamp())\n",
+    "    .withColumn(\"update_timestamp\",lit(\"9999-12-31 23:59:59\").cast(\"timestamp\"))\n",
     "    .withColumn(\"load_ctl_key\", date_format(current_timestamp(), \"yyyyMMddHHmmss\"))\n",
     "    .withColumn(\"start_date\", current_timestamp())\n",
     "    .withColumn(\"end_date\", lit(\"9999-12-31\"))\n",
@@ -306,7 +306,7 @@
     "        )))\n",
     "        .withColumn(\"primary_key\", md5(col(\"policy_id\")))\n",
     "        .withColumn(\"create_timestamp\", current_timestamp())\n",
-    "        .withColumn(\"update_timestamp\", lit(\"9999-12-31\"))\n",
+    "        .withColumn(\"update_timestamp\",lit(\"9999-12-31 23:59:59\").cast(\"timestamp\"))\n",
     "        .withColumn(\"load_ctl_key\", date_format(current_timestamp(), \"yyyyMMddHHmmss\"))\n",
     "        .withColumn(\"start_date\", current_date())\n",
     "        .withColumn(\"end_date\", lit(\"9999-12-31\"))\n",
@@ -1044,7 +1044,7 @@
     "        src.primary_key,\n",
     "        src.checksum_txt,\n",
     "        current_timestamp(),\n",
-    "        current_timestamp(),\n",
+    "        src.update_timestamp,\n",
     "        src.load_ctl_key,\n",
     "        src.transaction_ind,\n",
     "        'I',                    -- new active version\n",
