--- a/notebooks/01_ingest_raw_to_bronze.ipynb
+++ b/notebooks/01_ingest_raw_to_bronze.ipynb
@@ -224,41 +224,57 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import current_timestamp, input_file_name, monotonically_increasing_id\n",
+    "from pyspark.sql.functions import (\n",
+    "    current_timestamp,\n",
+    "    input_file_name,\n",
+    "    monotonically_increasing_id\n",
+    ")\n",
     "from datetime import date\n",
+    "\n",
     "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "\n",
+    "pipeline_name = \"Patient Bronze Load\"\n",
+    "layer = \"bronze\"\n",
+    "\n",
+    "# S3 source path\n",
+    "patient_src_path = \"s3a://mini-project-sathwik/raw/patient/Patient_Source.csv\"\n",
+    "\n",
+    "# derive file name dynamically\n",
+    "file_name = patient_src_path.split(\"/\")[-1]\n",
+    "\n",
     "try:\n",
     "    df_patient_raw = (\n",
-    "        spark.read.csv(\n",
-    "            \"s3a://mini-project-sathwik/raw/patient/Patient_Source.csv\",\n",
-    "            schema=patient_schema,\n",
-    "            header=True\n",
-    "        )\n",
+    "        spark.read\n",
+    "        .schema(patient_schema)\n",
+    "        .option(\"header\", True)\n",
+    "        .csv(patient_src_path)\n",
     "        .withColumn(\"ingest_time\", current_timestamp())\n",
     "        .withColumn(\"source_file\", input_file_name())\n",
     "        .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
     "    )\n",
-    "    count=df_patient_raw.count()\n",
+    "    row_count = df_patient_raw.count()\n",
     "    log_etl(\n",
-    "        pipeline_name=\"Patient Bronze Load\",\n",
+    "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
-    "        file_name=\"patient_source_batch1.csv\",\n",
-    "        layer=\"bronze\",\n",
+    "        file_name=file_name,\n",
+    "        layer=layer,\n",
     "        status=\"SUCCESS\",\n",
-    "        row_count=count,\n",
-    "        message=\"Bronze load completed.\"\n",
+    "        row_count=row_count,\n",
+    "        message=f\"{pipeline_name} completed successfully for {file_name}\"\n",
     "    )\n",
+    "\n",
     "except Exception as e:\n",
     "    log_etl(\n",
-    "        pipeline_name=\"Patient Bronze Load\",\n",
+    "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
-    "        file_name=\"patient_source_batch1.csv\",\n",
-    "        layer=\"bronze\",\n",
+    "        file_name=file_name,\n",
+    "        layer=layer,\n",
     "        status=\"FAILED\",\n",
     "        row_count=0,\n",
-    "        message=str(e)\n",
+    "        message=f\"Error processing {file_name}: {str(e)}\"\n",
     "    )\n",
-    "    raise e"
+    "    raise\n"
    ]
   },
   {
@@ -305,27 +321,6 @@
     "%sql\n",
     "DROP TABLE IF EXISTS patient_bronze;\n",
     "DROP TABLE IF EXISTS insurance_bronze;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ada3515b-3605-46c6-b6dc-258a0fdd5702",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_patient_raw = df_patient_raw.na.drop(subset=[\"patient_id\"])\n"
    ]
   },
   {
@@ -449,43 +444,70 @@
    },
    "outputs": [],
    "source": [
-    "# -----------------------------\n",
-    "# 4. Read Raw Insurance File\n",
-    "# -----------------------------\n",
     "from datetime import date\n",
+    "from pyspark.sql.types import (\n",
+    "    StructType, StructField,\n",
+    "    StringType, LongType, TimestampType\n",
+    ")\n",
+    "from pyspark.sql.functions import (\n",
+    "    current_timestamp,\n",
+    "    input_file_name,\n",
+    "    monotonically_increasing_id\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# Batch & Pipeline Metadata\n",
+    "# =========================\n",
     "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "\n",
+    "pipeline_name = \"Insurance Bronze Load\"\n",
+    "layer = \"bronze\"\n",
+    "\n",
+    "# S3 source path\n",
+    "insurance_src_path = \"s3a://mini-project-sathwik/raw/insurance/Insurance_Source.csv\"\n",
+    "\n",
+    "# derive file name dynamically (works for s3a, dbfs, local)\n",
+    "file_name = insurance_src_path.split(\"/\")[-1]\n",
+    "\n",
     "try:\n",
+    "    insurance_schema = StructType([\n",
+    "    StructField(\"policy_id\", StringType(), True),\n",
+    "    StructField(\"insurance_provider\", StringType(), True),\n",
+    "    StructField(\"amount_covered\", LongType(), True),   \n",
+    "    StructField(\"claim_status\", StringType(), True)\n",
+    "    ])\n",
     "    df_insurance_raw = (\n",
-    "        spark.read\n",
-    "            .option(\"header\", True)\n",
-    "            .option(\"inferSchema\", True)\n",
-    "            .csv(insurance_src_path)\n",
-    "            .withColumn(\"ingest_time\", current_timestamp())\n",
-    "            .withColumn(\"source_file\", input_file_name())\n",
-    "            .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
+    "    spark.read\n",
+    "    .option(\"header\", True)\n",
+    "    .schema(insurance_schema)          \n",
+    "    .csv(insurance_src_path)\n",
+    "    .withColumn(\"ingest_time\", current_timestamp())\n",
+    "    .withColumn(\"source_file\", input_file_name())\n",
+    "    .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
     "    )\n",
-    "    count=df_insurance_raw.count()\n",
+    "    row_count = df_insurance_raw.count()\n",
     "    log_etl(\n",
-    "        pipeline_name=\"Insurance Bronze Load\",\n",
+    "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
-    "        file_name=\"insurance_source_batch1.csv\",\n",
-    "        layer=\"bronze\",\n",
+    "        file_name=file_name,\n",
+    "        layer=layer,\n",
     "        status=\"SUCCESS\",\n",
-    "        row_count=count,\n",
-    "        message=\"Bronze load completed.\"\n",
+    "        row_count=row_count,\n",
+    "        message=f\"{pipeline_name} completed successfully for {file_name}\"\n",
     "    )\n",
+    "\n",
     "except Exception as e:\n",
     "    log_etl(\n",
-    "        pipeline_name=\"Insurance Bronze Load\",\n",
+    "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
-    "        file_name=\"insurance_source_batch1.csv\",\n",
-    "        layer=\"bronze\",\n",
+    "        file_name=file_name,\n",
+    "        layer=layer,\n",
     "        status=\"FAILED\",\n",
     "        row_count=0,\n",
-    "        message=str(e)\n",
+    "        message=f\"Error processing {file_name}: {str(e)}\"\n",
     "    )\n",
-    "    raise e\n",
-    "\n"
+    "    raise\n"
    ]
   },
   {
@@ -508,27 +530,6 @@
    "source": [
     "print(\"Insurance_RAW Schema:\")\n",
     "df_insurance_raw.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cbc3bd21-e4f6-426c-8a64-1065901e331c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_insurance_raw = df_insurance_raw.na.drop(subset=[\"policy_id\"])"
    ]
   },
   {
@@ -721,6 +722,285 @@
    "source": [
     "df_insurance_raw.printSchema()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7093e6f3-129d-4018-947f-c1b11d4dc624",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE DATABASE IF NOT EXISTS mini_proj_metrics;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "52da330d-4e48-4727-8555-2536db952ac5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE TABLE IF NOT EXISTS mini_proj_metrics.dq_insurance_bronze_metrics (\n",
+    "    batch_id STRING,\n",
+    "    layer STRING,\n",
+    "    table_name STRING,\n",
+    "    total_rows BIGINT,\n",
+    "    null_policy_id BIGINT,\n",
+    "    null_insurance_provider BIGINT,\n",
+    "    null_amount_covered BIGINT,\n",
+    "    null_claim_status BIGINT,\n",
+    "    load_timestamp TIMESTAMP\n",
+    ")\n",
+    "USING DELTA;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3d456f2d-19bd-4b4c-92a3-0ddb1e39ef61",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "INSERT INTO mini_proj_metrics.dq_insurance_bronze_metrics\n",
+    "SELECT\n",
+    "    date_add(current_date(), 1)  AS batch_id,\n",
+    "    'bronze' AS layer,\n",
+    "    'insurance_bronze' AS table_name,\n",
+    "    COUNT(*) AS total_rows,\n",
+    "    SUM(CASE WHEN policy_id IS NULL THEN 1 ELSE 0 END),\n",
+    "    SUM(CASE WHEN insurance_provider IS NULL THEN 1 ELSE 0 END),\n",
+    "    SUM(CASE WHEN amount_covered IS NULL THEN 1 ELSE 0 END),\n",
+    "    SUM(CASE WHEN claim_status IS NULL THEN 1 ELSE 0 END),\n",
+    "    current_timestamp()\n",
+    "FROM insurance_bronze;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3713e747-d828-4937-9bf1-c5c93f881e8e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE TABLE IF NOT EXISTS mini_proj_metrics.dq_patient_bronze_metrics (\n",
+    "    batch_id STRING,\n",
+    "    table_name STRING,\n",
+    "    total_rows BIGINT,\n",
+    "    null_patient_id BIGINT,\n",
+    "    null_name BIGINT,\n",
+    "    null_address BIGINT,\n",
+    "    null_phone_number BIGINT,\n",
+    "    null_policy_id BIGINT,\n",
+    "    null_age BIGINT,\n",
+    "    null_bill_amount BIGINT,\n",
+    "    load_time TIMESTAMP\n",
+    ")\n",
+    "USING DELTA;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "170597a9-cb92-483e-a4bc-2007a9d99990",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "INSERT INTO mini_proj_metrics.dq_patient_bronze_metrics\n",
+    "SELECT\n",
+    "    date_add(current_date(), 1)                       AS batch_id,          -- or pass your batch_id variable\n",
+    "    'patient_bronze'                      AS table_name,\n",
+    "    COUNT(*)                              AS total_rows,\n",
+    "    SUM(CASE WHEN patient_id IS NULL THEN 1 ELSE 0 END) AS null_patient_id,\n",
+    "    SUM(CASE WHEN name IS NULL THEN 1 ELSE 0 END)       AS null_name,\n",
+    "    SUM(CASE WHEN address IS NULL THEN 1 ELSE 0 END)    AS null_address,\n",
+    "    SUM(CASE WHEN phone_number IS NULL THEN 1 ELSE 0 END) AS null_phone_number,\n",
+    "    SUM(CASE WHEN policy_id IS NULL THEN 1 ELSE 0 END)  AS null_policy_id,\n",
+    "    SUM(CASE WHEN age IS NULL THEN 1 ELSE 0 END)        AS null_age,\n",
+    "    SUM(CASE WHEN bill_amount IS NULL THEN 1 ELSE 0 END) AS null_bill_amount,\n",
+    "    current_timestamp()                   AS load_time\n",
+    "FROM patient_bronze;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "021ea4f5-fb44-4bf6-9dea-11ae7f30f06a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from mini_proj_metrics.dq_patient_bronze_metrics;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8139b4a0-6e77-4c56-8d94-6dae9fa0981b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT current_catalog(), current_database();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0480a3e5-adbd-46d9-9d1f-e12aa9f98457",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SHOW TABLES IN hive_metastore.mini_proj_metrics;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "35ea136b-7455-4069-9b08-265bd82a385e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "use mini_proj_logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9cc9e656-3ec8-40cb-ab5e-6088baf1ff21",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "df = spark.table(\"mini_proj_logs.etl_log\")\n",
+    "\n",
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_logs.etl_log_accessible\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -735,7 +1015,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7729577076726402,
+     "commandId": 4815705922844279,
      "dataframes": [
       "_sqldf"
      ]
